terraform/insecure_s3.tf
resource "aws_s3_bucket" "bad__bucket" {
  bucket = "my-public-bucket"

  acl = "public-read"
}

resource "aws_security_group" "bad_sg" {

  ingress {
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }
}
